--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         .painel{
         padding-top: 20px;
         margin: auto;
-        width: 500px;
+        width: 80vw;
         height: auto;
         background-color: #FFC0CB;
         border-radius: 20px;
