--- a/video.html
+++ b/video.html
@@ -16,8 +16,8 @@
         }
         div video{
         border-radius: 2%;
-        height: 50vh;
-        width: auto;
+        height: auto;
+        width: 70vw;
         top: 50%;
         right: 50%;
     }
