--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="y2i4bbdmhrv61.webp" type="image/x-icon">
-    <title>Te amo!</title>
+    <title>Theus e Lett</title>
         
     <style>
        body{
