--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
+    .painel img{
+        width: 40vw;
+        height: auto;
+
+
+    }
     
     h1{
       font-size: 500;
